// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstructorCourseDetailsPageComponent should snap with a course with one co-owner and no students, and populated course student list 1`] = `
<tm-instructor-course-details-page
  clipboardService={[Function ClipboardService]}
  courseDetails={[Function Object]}
  courseService={[Function CourseService]}
  courseStudentListAsCsv={[Function String]}
  httpRequestService={[Function HttpRequestService]}
  instructors={[Function Array]}
  isAjaxSuccess={[Function Boolean]}
  loading={[Function Boolean]}
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  route={[Function ActivatedRoute]}
  router={[Function Router]}
  sections={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  user="undefined"
>
  <div>
    <h1>
      Course Details
    </h1>
    <div
      class="card"
    >
      <div
        class="card-body fill-plain"
      >
        <div
          class="form"
        >
          <div
            class="form-group row"
          >
            <label
              class="col-sm-3 text-right"
            >
              Course ID:
            </label>
            <div
              class="col-sm-6"
            >
              <p
                class="form-control-static"
              >
                CS101
              </p>
            </div>
          </div>
          <div
            class="form-group row"
          >
            <label
              class="col-sm-3 text-right"
            >
              Course name:
            </label>
            <div
              class="col-sm-6"
              id="coursename"
            >
              <p
                class="form-control-static"
              >
                Introduction to CS
              </p>
            </div>
          </div>
          <div
            class="form-group row"
          >
            <label
              class="col-sm-3 text-right"
            >
              Sections:
            </label>
            <div
              class="col-sm-6"
            >
              <p
                class="form-control-static"
              >
                0
              </p>
            </div>
          </div>
          <div
            class="form-group row"
          >
            <label
              class="col-sm-3 text-right"
            >
              Teams:
            </label>
            <div
              class="col-sm-6"
            >
              <p
                class="form-control-static"
              >
                0
              </p>
            </div>
          </div>
          <div
            class="form-group row"
          >
            <label
              class="col-sm-3 text-right"
            >
              Total students:
            </label>
            <div
              class="col-sm-6"
            >
              <p
                class="form-control-static"
              >
                0
              </p>
            </div>
          </div>
        </div>
        <div
          class="form-group row"
        >
          <label
            class="col-sm-3 control-label text-right"
          >
            Instructors:
          </label>
          <div
            class="col-sm-6"
          >
            
            <div>
              
              
               Co-owner: Hodor (hodor@gmail.com) 
              
            </div>
          </div>
        </div>
        
      </div>
    </div>
    
    <div
      class="alert alert-warning"
    >
      <i
        class="fa fa-exclamation-circle text-muted"
      />
       There are no students in this course. Click 
      <a
        href="/web/instructor/courses/enroll?courseid=CS101"
        ng-reflect-query-params="[object Object]"
        ng-reflect-router-link="/web/instructor/courses/enroll"
        routerlink="/web/instructor/courses/enroll"
      >
        here
      </a>
       to enroll students. 
    </div>
    
    
    
    
  </div>
</tm-instructor-course-details-page>
`;

exports[`InstructorCourseDetailsPageComponent should snap with a course with one co-owner and one student, and ajax failure 1`] = `
<tm-instructor-course-details-page
  clipboardService={[Function ClipboardService]}
  courseDetails={[Function Object]}
  courseService={[Function CourseService]}
  courseStudentListAsCsv=""
  httpRequestService={[Function HttpRequestService]}
  instructors={[Function Array]}
  isAjaxSuccess="false"
  loading="false"
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  route={[Function ActivatedRoute]}
  router={[Function Router]}
  sections={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  user="undefined"
>
  <div>
    <h1>
      Course Details
    </h1>
    <div
      class="card"
    >
      <div
        class="card-body fill-plain"
      >
        <div
          class="form"
        >
          <div
            class="form-group row"
          >
            <label
              class="col-sm-3 text-right"
            >
              Course ID:
            </label>
            <div
              class="col-sm-6"
            >
              <p
                class="form-control-static"
              >
                CS101
              </p>
            </div>
          </div>
          <div
            class="form-group row"
          >
            <label
              class="col-sm-3 text-right"
            >
              Course name:
            </label>
            <div
              class="col-sm-6"
              id="coursename"
            >
              <p
                class="form-control-static"
              >
                Introduction to CS
              </p>
            </div>
          </div>
          <div
            class="form-group row"
          >
            <label
              class="col-sm-3 text-right"
            >
              Sections:
            </label>
            <div
              class="col-sm-6"
            >
              <p
                class="form-control-static"
              >
                1
              </p>
            </div>
          </div>
          <div
            class="form-group row"
          >
            <label
              class="col-sm-3 text-right"
            >
              Teams:
            </label>
            <div
              class="col-sm-6"
            >
              <p
                class="form-control-static"
              >
                1
              </p>
            </div>
          </div>
          <div
            class="form-group row"
          >
            <label
              class="col-sm-3 text-right"
            >
              Total students:
            </label>
            <div
              class="col-sm-6"
            >
              <p
                class="form-control-static"
              >
                1
              </p>
            </div>
          </div>
        </div>
        <div
          class="form-group row"
        >
          <label
            class="col-sm-3 control-label text-right"
          >
            Instructors:
          </label>
          <div
            class="col-sm-6"
          >
            
            <div>
              
              
               Co-owner: Bran (bran@gmail.com) 
              
            </div>
          </div>
        </div>
        
        <div>
          <div
            class="form-group"
          >
            <div
              class="text-center"
            >
              <button
                class="btn btn-primary"
                type="button"
                value="Remind Students to Join"
              >
                <i
                  class="fa fa-envelope"
                />
                 Remind Students to Join 
              </button>
              <button
                class="btn btn-primary"
                type="button"
              >
                <i
                  class="fa fa-download"
                />
                 Download Student List 
              </button>
              <button
                class="btn btn-danger"
                type="button"
                value="Delete All Students"
              >
                <i
                  class="fa fa-trash"
                />
                 Delete All Students 
              </button>
              <div>
                <span>
                  Non-English characters not displayed properly in the downloaded file? 
                  <span
                    class="btn-link"
                  >
                     Click here. 
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    
    <div
      class="card-header text-white bg-primary font-weight-bold"
    >
      Students
    </div>
    <div
      class="card-body p-3"
    >
      <div
        class="card-header text-dark-blue bg-light-blue font-weight-bold"
      >
        [CS101]
      </div>
      <div
        class="card-body p-0"
      >
        <tm-student-list
          ng-reflect-course-id="CS101"
          ng-reflect-enable-remind-button="true"
          ng-reflect-sections="[object Object]"
          ng-reflect-use-gray-heading="true"
        />
      </div>
    </div>
    
    
    
    
  </div>
</tm-instructor-course-details-page>
`;

exports[`InstructorCourseDetailsPageComponent should snap with default fields 1`] = `
<tm-instructor-course-details-page
  clipboardService={[Function ClipboardService]}
  courseService={[Function CourseService]}
  courseStudentListAsCsv=""
  httpRequestService={[Function HttpRequestService]}
  instructors={[Function Array]}
  isAjaxSuccess={[Function Boolean]}
  loading="false"
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  route={[Function ActivatedRoute]}
  router={[Function Router]}
  sections={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  user="undefined"
>
  
</tm-instructor-course-details-page>
`;
